# superwise

./: .gitignore  LICENSE  README.md
examples/getting-started/: .env.example  README.md  config.py  main.py  pyproject.toml
trysuperwise/: README.md  pyproject.toml
trysuperwise/trysuperwise/: __init__.py  config.py  trysuperwise.py
